# mhd-io

./: ReadMe.md  meson.build  subprojects.txt
include/mhd-io/: base.hpp  mhd-io.hpp  read.hpp  write.hpp
include/mhd-io/base/: defs.hpp
include/mhd-io/read/: read.hpp
subprojects/: .gitignore  unordered_dense.wrap
subprojects/packagefiles/unordered_dense/: meson.build
test/: meson.build  read.cpp
test/data/: UFZ_CT_02.mhd
